--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: All Things Considered
+email: mrchief_2000 AT yahoo DOT com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  All views are my own and I own the right to copy.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://mrchief.github.io" # the base hostname & protocol for your site
+twitter_username: hrusikeshpanda
+github_username:  mrchief
 
 # Build settings
 markdown: kramdown
